modification de logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="sizeNav"> 
             <div class="flexBetween">
                 <div class="margLogo">
-                    <img src="Reservia@3x.png" alt="logo Reservia" width="120px" height="50px"/></div>
+                    <img src="images/Reservia@3x.png" alt="logo Reservia" width="120px" height="50px"/></div>
                 <div class=" sizeliens flexAround">
                     <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hérbergements</a></div>
                     <div class="sizelien flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
