changé la position des images d'hébergement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="flexBetween">
                 <div class="margLogo">
                     <img src="images/Reservia@3x.png" alt="logo Reservia" class="margImgLogo"/></div>
-                <div class=" sizeliens flexAround">
+                <div class="sizeliens flexAround">
                     <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hérbergements</a></div>
                     <div class="sizelien flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
                     <div class="sizelien flexCentre bordureNav "><a class="texteGras colorBleu decorationNone" href="#">S'inscrire</a></div>
@@ -64,7 +64,7 @@
                 <h3>Hérbergements à Marseille</h3>
                 <div class="bloc1 flexBetween">
                     <div class="cubeHérbergement">
-                        <div class="imgHérbergement1"></div>
+                        <img class="imgHérbergement1" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Auberge la Cannebiére</h3>
                             <p>Nuit à partir de 25€</p>
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <div class="imgHérbergement2"></div>
+                        <img class="imgHérbergement2" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Hōtel du port</h3>
                             <p>Nuit à partir de 52€</p>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <div class="imgHérbergement3"></div>
+                        <img class="imgHérbergement3" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Hōtel les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
@@ -108,7 +108,7 @@
                 </div> 
                 <div class="bloc2 flexBetween">
                     <div class="cubeHérbergement">
-                        <div class="imgHérbergement4"></div>
+                        <img class="imgHérbergement4" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Auberge de la mer</h3>
                             <p>Nuit à partir de 46€</p>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <div class="imgHérbergement5"></div>
+                        <img class="imgHérbergement5" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Auberge le panier</h3>
                             <p>Nuit à partir de 23€</p>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <div class="imgHérbergement6"></div>
+                        <img class="imgHérbergement6" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Hōtel chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
