--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="flexColumnAround">
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
-                        <div class="imgPopulaire1"></div>
+                        <img class="imgPopulaire1" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Hōtel le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
-                        <div class="imgPopulaire2"></div>
+                        <img class="imgPopulaire2" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Au cœur de l'eau chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
-                        <div class="imgPopulaire3"></div>
+                        <img class="imgPopulaire3" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Hōtel Tout Bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
