--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     </head>
     <body>
         <nav class="sizeNav"> 
-            <div class="flexBetween">
+            <div class="sizeliens flexBetween">
                 <div class="margLogo">
                     <img src="images/Reservia@3x.png" alt="logo Reservia" class="margImgLogo"/></div>
-                <div class="sizeliens flexAround">
-                    <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hérbergements</a></div>
-                    <div class="sizelien flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
+                <div class="flexAround">
+                    <!--reajoute une div -->
+                    <div class="sizelien1_2 flexCentre">
+                        <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hérbergements</a></div>
+                        <div class="sizelien flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
+                     </div>
                     <div class="sizelien flexCentre bordureNav "><a class="texteGras colorBleu decorationNone" href="#">S'inscrire</a></div>
                 </div>
             </div>
