mode response de footer

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
                 <div class="mobileFiltreWrap filtre FiltreMarg ">
                     <div class="FiltreTitreMarg "><h3>Filtres</h3></div>  
-                    <!--rajoute 2 div flexAround pour separer en mobile--> 
-                    <!--div1-->
-                        <div class="flexAround">       
+                    <!--rajoute 2 div flexAround pour separer en mobile-->
+                 <!--div 1--> 
+                        <div class="flexAround">    
                             <div class="flexBetween filtreIconsTexte">
                             <i class="fas fa-money-bill-wave fa-lg filtreIcons flexCentre"></i>
                             <div class="filtreTexte flexCentre">Economique</div>
@@ -56,7 +56,7 @@
                             <i class="fas fa-child fa-lg filtreIcons flexCentre"></i><div class="filtreTexte flexCentre">Familiales</div>
                             </div>
                         </div>
-                        <!--div2-->
+                        <!--Div 2-->
                         <div class="mobileFiltreWrap flexAround">
                             <div class="flexBetween filtreIconsTexte">
                             <i class="fas fa-heart fa-lg filtreIcons flexCentre"></i><div class="filtreTexte flexCentre">Romantique</div>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement6" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
+                        <img class="imgHérbergement6" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
                             <h3>Hōtel chez Amina</h3>
                             <p>Nuit à partir de 96€</p>
