mode responsive de hérbergment et activites

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class=" bordureSearch flexCentre">
                     <div class="backGris flexCentre iconSize"><i class="fas fa-map-marker-alt"></i></div>
                     <div><input class="recherche flexCentre bordureNone paddingSearch" type="search" value="Marseille, France"/></div>
-                    <div class="backBleu flexCentre buttonSearch">Rechercher</div>
+                    <div class="backBleu flexCentre buttonSearch"><i class="fas fa-search">Rechercher</i></div>
                 </div>
 
                 <div class="mobileFiltreWrap filtre FiltreMarg ">
@@ -77,7 +77,7 @@
         <section id="hérbergements" class="flexAround">
             <div class="flexColumnAround sizeHérbergements backGris blocHérbergements">
                 <h2>Hérbergements à Marseille</h2>
-                <div class="bloc1 flexBetween">
+                <div class="bloc1">
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement1" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </div> 
-                <div class="bloc2 flexBetween">
+                <div class="bloc2">
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement4" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment flexColumnCentre">
@@ -255,21 +255,21 @@
             </div>      
         </section>
         <footer>
-            <div class="footer backGris flexBetween">
+            <div class="footer backGris">
 
                 <div class="margFootBloc1 footerBlocTaille">
-                    <h3>A Propos</h3>
+                    <h3 class="texteGras">A Propos</h3>
                     <div class="divfootLien"><a href="#" class="decorationNone footLien">Functionnement du site</a></div>
                     <div class="divfootLien"> <a href="#" class="decorationNone footLien">Conditions génerales de vente</a></div>
                     <div class="divfootLien"><a href="#" class="decorationNone footLien">Donnes et confidentialité</a></div>
                 </div>
                 <div class="footerBlocTaille">
-                    <h3>Nos hérbergements</h3>
+                    <h3 class="texteGras">Nos hérbergements</h3>
                     <div class="divfootLien"><a href="#" class="decorationNone footLien">Charte qualité</a></div>
                     <div class="divfootLien"><a href="#" class="decorationNone footLien">Soumettre votre hôtel</a></div> 
                 </div>
                 <div class="margFootBloc3 footerBlocTaille">
-                    <h3>Assistance</h3>
+                    <h3 class="texteGras">Assistance</h3>
                     <div class="divfootLien"><a href="#" class="decorationNone footLien">Centre d'aide</a></div>
                     <div class="divfootLien"><a href="#" class="decorationNone footLien">Nous contacter</a></div>
                 </div>
