mode responsive buttonSearch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <!--rajoute un div-->
 
                     <div class="sizelien1_2 flexCentre">
-                        <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hérbergements</a></div>
+                        <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hébergements</a></div>
                         <div class="sizelien flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
                     </div>
 
@@ -39,7 +39,7 @@
                 <div class=" bordureSearch flexCentre">
                     <div class="backGris flexCentre iconSize"><i class="fas fa-map-marker-alt"></i></div>
                     <div><input class="recherche flexCentre bordureNone paddingSearch" type="search" value="Marseille, France"/></div>
-                    <div class="backBleu flexCentre buttonSearch"><i class="fas fa-search">Rechercher</i></div>
+                    <button class="buttonSearch backBleu flexCentre " type="submit">Rechercher<i class="fas fa-search"></i></button> 
                 </div>
 
                 <div class="mobileFiltreWrap filtre FiltreMarg ">
@@ -79,10 +79,10 @@
                 <h2>Hérbergements à Marseille</h2>
                 <div class="bloc1">
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement1" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
-                        <div class="cubeDetailsHérbegerment flexColumnCentre">
+                        <img class="imgHérbergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
+                        <div class="cubeDetailsHérbegerment"><!--enlever flexColumnCentre-->
                             <h3>Auberge la Cannebiére</h3>
-                            <p>Nuit à partir de 25€</p>
+                            <p>Nuit à partir de <b>25€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -93,10 +93,10 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement2" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo"/>
-                        <div class="cubeDetailsHérbegerment flexColumnCentre">
+                        <img class="imgHérbergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo"/>
+                        <div class="cubeDetailsHérbegerment">
                             <h3>Hōtel du port</h3>
-                            <p>Nuit à partir de 52€</p>
+                            <p>Nuit à partir de <b>52€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -107,10 +107,10 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement3" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo"/>
-                        <div class="cubeDetailsHérbegerment flexColumnCentre">
+                        <img class="imgHérbergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo"/>
+                        <div class="cubeDetailsHérbegerment">
                             <h3>Hōtel les mouettes</h3>
-                            <p>Nuit à partir de 76€</p>
+                            <p>Nuit à partir de <b>76€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -123,10 +123,10 @@
                 </div> 
                 <div class="bloc2">
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement4" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
-                        <div class="cubeDetailsHérbegerment flexColumnCentre">
+                        <img class="imgHérbergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
+                        <div class="cubeDetailsHérbegerment">
                             <h3>Auberge de la mer</h3>
-                            <p>Nuit à partir de 46€</p>
+                            <p>Nuit à partir de <b>46€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -137,10 +137,10 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement5" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo"/>
-                        <div class="cubeDetailsHérbegerment flexColumnCentre">
+                        <img class="imgHérbergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo"/>
+                        <div class="cubeDetailsHérbegerment">
                             <h3>Auberge le panier</h3>
-                            <p>Nuit à partir de 23€</p>
+                            <p>Nuit à partir de <b>23€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -151,10 +151,10 @@
                         </div>
                     </div>
                     <div class="cubeHérbergement">
-                        <img class="imgHérbergement6" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo"/>
-                        <div class="cubeDetailsHérbegerment flexColumnCentre">
+                        <img class="imgHérbergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo"/>
+                        <div class="cubeDetailsHérbegerment">
                             <h3>Hōtel chez Amina</h3>
-                            <p>Nuit à partir de 96€</p>
+                            <p>Nuit à partir de <b>96€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -178,7 +178,7 @@
                         <img class="imgPopulaire1" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Hōtel le soleil du matin</h3>
-                            <p>Nuit à partir de 128€</p>
+                            <p>Nuit à partir de <b>128€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -192,7 +192,7 @@
                         <img class="imgPopulaire2" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Au cœur de l'eau chambres d'hôtes</h3>
-                            <p>Nuit à partir de 71€</p>
+                            <p>Nuit à partir de <b>71€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -206,7 +206,7 @@
                         <img class="imgPopulaire3" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Hōtel Tout Bleu et Blanc</h3>
-                            <p>Nuit à partir de 68€</p>
+                            <p>Nuit à partir de <b>68€</b></p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
