responsive navbar mobile

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <!--rajoute un div-->
 
                     <div class="sizelien1_2 flexCentre">
-                        <div class="sizelien flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hébergements</a></div>
-                        <div class="sizelien flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
+                        <div class="sizelien sizelienMobile flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hébergements</a></div>
+                        <div class="sizelien sizelienMobile flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
                     </div>
 
                     <div class="sizelien flexCentre bordureNav "><a class="texteGras colorBleu decorationNone" href="#">S'inscrire</a></div>
@@ -39,7 +39,7 @@
                 <div class=" bordureSearch flexCentre">
                     <div class="backGris flexCentre iconSize"><i class="fas fa-map-marker-alt"></i></div>
                     <div><input class="recherche flexCentre bordureNone paddingSearch" type="search" value="Marseille, France"/></div>
-                    <button class="buttonSearch backBleu flexCentre " type="submit">Rechercher<i class="fas fa-search"></i></button> 
+                    <div class="buttonSearch backBleu flexCentre"><span class="mobileMode">Rechercher</span><span class="desktopMode"><i class="fas fa-search"></i></span></div>
                 </div>
 
                 <div class="mobileFiltreWrap filtre FiltreMarg ">
@@ -175,7 +175,7 @@
                 </div>
                 <div class="flexColumnAround">
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
-                        <img class="imgPopulaire1" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
+                        <img class="imgPopulaire" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Hōtel le soleil du matin</h3>
                             <p>Nuit à partir de <b>128€</b></p>
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
-                        <img class="imgPopulaire2" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
+                        <img class="imgPopulaire" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Au cœur de l'eau chambres d'hôtes</h3>
                             <p>Nuit à partir de <b>71€</b></p>
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
-                        <img class="imgPopulaire3" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
+                        <img class="imgPopulaire" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h3>Hōtel Tout Bleu et Blanc</h3>
                             <p>Nuit à partir de <b>68€</b></p>
