--- a/index.html
+++ b/index.html
@@ -224,30 +224,30 @@
             <h2>Activités à Marseille</h2>
             <div class="blocActivites flexBetween">
                 <div class="cubeActivites flexColumnCentre">
-                    <img class="imgActivites1" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo"/>
+                    <img class="imgActivitesG" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo"/>
                     <div class="hauterTitre titreActivites"><h3>Vieux Port</h3></div>
                 </div>
                 <div class="blocActivites2_3_5_6 flexColumnBetween">
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
-                        <img class="imgActivites2" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo"/>
+                        <img class="imgActivitesM" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo"/>
                         <div class="hauterTitre titreActivites"><h3>Fort de Pomègues</h3></div>
                     </div>
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
-                        <img class="imgActivites3" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo"/>
+                        <img class="imgActivitesP" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo"/>
                         <div class="hauterTitre titreActivites"><h3>Îles du Frioul</h3></div>
                     </div>
                 </div>
                 <div class="cubeActivites flexColumnCentre">
-                    <img class="imgActivites4" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo"/>
+                    <img class="imgActivitesG" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo"/>
                     <div class="hauterTitre titreActivites"><h3>Parc National des Calanques</h3></div>
                 </div>
                 <div class="blocActivites2_3_5_6 flexColumnBetween">
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
-                        <img class="imgActivites5" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo"/>
+                        <img class="imgActivitesM" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo"/>
                         <div class="hauterTitre titreActivites"><h3>Notre-Dame-de-la-Garde</h3></div>
                     </div>
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
-                        <img class="imgActivites6" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo"/>
+                        <img class="imgActivitesP" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo"/>
                         <div class="hauterTitre titreActivites"><h3>Parc Longchamp</h3></div>
                     </div>
                 </div>  
