--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang ="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
         <title>Reservia</title>
     </head>
@@ -18,7 +18,7 @@
                 <div class="margLogo">
                     <img src="images/Reservia@3x.png" alt="logo Reservia" class="margImgLogo"/></div>
             
-                    <!--rajoute un div-->
+                    <!--rajoute un div pour mobile responsive-->
 
                     <div class="sizelien1_2 flexCentre">
                         <div class="sizelien sizelienMobile flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hébergements</a></div>
@@ -31,12 +31,12 @@
         </nav>
         <header>
             <section>
-                <div>
+                <div class="margMobileNav"> <!--rajoute class pour mobile-->
                     <h1 class="texteGras">Trouvez votre hérbergements pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
 
-                <div class=" bordureSearch flexCentre">
+                <div class="bordureSearch flexCentre">
                     <div class="backGris flexCentre iconSize"><i class="fas fa-map-marker-alt"></i></div>
                     <div><input class="recherche flexCentre bordureNone paddingSearch" type="search" value="Marseille, France"/></div>
                     <div class="buttonSearch backBleu flexCentre"><span class="mobileMode">Rechercher</span><span class="desktopMode"><i class="fas fa-search"></i></span></div>
@@ -221,7 +221,7 @@
         </section>
 
         <section id="Activities" class="Activites">
-            <h2>Activités à Marseille</h2>
+            <h2 class="margMobileActivités">Activités à Marseille</h2> <!--rajoute class pour mobile-->
             <div class="blocActivites flexBetween">
                 <div class="cubeActivites flexColumnCentre">
                     <img class="imgActivitesG" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo"/>
