adjustements de mode responsive

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </header>
         <section id="hérbergements" class="flexAround">
             <div class="flexColumnAround sizeHérbergements backGris blocHérbergements">
-                <h2>Hérbergements à Marseille</h2>
+                <h2 class="margMobileHérbergement">Hérbergements à Marseille</h2>
                 <div class="bloc1">
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
