--- a/index.html
+++ b/index.html
@@ -9,30 +9,33 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
         <title>Reservia</title>
     </head>
     <body>
         <nav class="sizeNav"> 
-            <div class="sizeliens flexBetween">
+            <div class="sizeLiens flexBetween">
                 <div class="margLogo">
                     <img src="images/Reservia@3x.png" alt="logo Reservia" class="margImgLogo"/></div>
             
-                    <!--rajoute un div pour mobile responsive-->
+                     <!--rajoute une div qui englobe les deux liens hérbergement et activities pour mobile-->
 
-                    <div class="sizelien1_2 flexCentre">
-                        <div class="sizelien sizelienMobile flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hébergements</a></div>
-                        <div class="sizelien sizelienMobile flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
+                    <div class="sizeLien1_2 flexCentre">
+                        <div class="sizeLien sizelienMobile flexCentre bordureNav"><a class="colorLien2 decorationNone" href="#hérbergements">Hébergements</a></div>
+                        <div class="sizeLien sizelienMobile flexCentre bordureNav "><a class="colorLien2 decorationNone" href="#Activities">Activités</a></div>
                     </div>
 
-                    <div class="sizelien flexCentre bordureNav "><a class="texteGras colorBleu decorationNone" href="#">S'inscrire</a></div>
+                    <div class="sizeLien flexCentre bordureNav "><a class="texteGras colorBleu decorationNone" href="#">S'inscrire</a></div>
                 
             </div>
         </nav>
         <header>
             <section>
                 <div class="margMobileNav"> <!--rajoute class pour mobile-->
-                    <h1 class="texteGras">Trouvez votre hérbergements pour des vacances de rêve</h1>
+                    <h1 class="texteGras">Trouvez votre hérbergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
 
@@ -81,8 +84,8 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment"><!--enlever flexColumnCentre-->
-                            <h3>Auberge la Cannebiére</h3>
-                            <p>Nuit à partir de <b>25€</b></p>
+                            <h4>Auberge la Cannebiére</h4>
+                            <p>Nuit à partir de 25€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -95,8 +98,8 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h3>Hōtel du port</h3>
-                            <p>Nuit à partir de <b>52€</b></p>
+                            <h4>Hōtel du port</h4>
+                            <p>Nuit à partir de 52€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -109,8 +112,8 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h3>Hōtel les mouettes</h3>
-                            <p>Nuit à partir de <b>76€</b></p>
+                            <h4>Hōtel les mouettes</h4>
+                            <p>Nuit à partir de 76€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -125,8 +128,8 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h3>Auberge de la mer</h3>
-                            <p>Nuit à partir de <b>46€</b></p>
+                            <h4>Auberge de la mer</h4>
+                            <p>Nuit à partir de 46€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -139,8 +142,8 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h3>Auberge le panier</h3>
-                            <p>Nuit à partir de <b>23€</b></p>
+                            <h4>Auberge le panier</h4>
+                            <p>Nuit à partir de 23€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -153,8 +156,8 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h3>Hōtel chez Amina</h3>
-                            <p>Nuit à partir de <b>96€</b></p>
+                            <h4>Hōtel chez Amina</h4>
+                            <p>Nuit à partir de 96€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -177,8 +180,8 @@
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <h3>Hōtel le soleil du matin</h3>
-                            <p>Nuit à partir de <b>128€</b></p>
+                            <h4>Hōtel le soleil du matin</h4>
+                            <p>Nuit à partir de 128€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -191,8 +194,8 @@
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <h3>Au cœur de l'eau chambres d'hôtes</h3>
-                            <p>Nuit à partir de <b>71€</b></p>
+                            <h4>Au cœur de l'eau chambres d'hôtes</h4>
+                            <p>Nuit à partir de 71€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -205,8 +208,8 @@
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <h3>Hōtel Tout Bleu et Blanc</h3>
-                            <p>Nuit à partir de <b>68€</b></p>
+                            <h4>Hōtel Tout Bleu et Blanc</h4>
+                            <p>Nuit à partir de 68€</p>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -225,30 +228,30 @@
             <div class="blocActivites flexBetween">
                 <div class="cubeActivites flexColumnCentre">
                     <img class="imgActivitesG" src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo"/>
-                    <div class="hauterTitre titreActivites"><h3>Vieux Port</h3></div>
+                    <div class="hauterTitre titreActivites"><h4>Vieux Port</h4></div>
                 </div>
                 <div class="blocActivites2_3_5_6 flexColumnBetween">
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
                         <img class="imgActivitesM" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo"/>
-                        <div class="hauterTitre titreActivites"><h3>Fort de Pomègues</h3></div>
+                        <div class="hauterTitre titreActivites"><h4>Fort de Pomègues</h4></div>
                     </div>
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
                         <img class="imgActivitesP" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="photo"/>
-                        <div class="hauterTitre titreActivites"><h3>Îles du Frioul</h3></div>
+                        <div class="hauterTitre titreActivites"><h4>Îles du Frioul</h4></div>
                     </div>
                 </div>
                 <div class="cubeActivites flexColumnCentre">
                     <img class="imgActivitesG" src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo"/>
-                    <div class="hauterTitre titreActivites"><h3>Parc National des Calanques</h3></div>
+                    <div class="hauterTitre titreActivites"><h4>Parc National des Calanques</h4></div>
                 </div>
                 <div class="blocActivites2_3_5_6 flexColumnBetween">
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
                         <img class="imgActivitesM" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo"/>
-                        <div class="hauterTitre titreActivites"><h3>Notre-Dame-de-la-Garde</h3></div>
+                        <div class="hauterTitre titreActivites"><h4>Notre-Dame-de-la-Garde</h4></div>
                     </div>
                     <div class="cubeActivites2_3_5_6 flexColumnCentre">
                         <img class="imgActivitesP" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="photo"/>
-                        <div class="hauterTitre titreActivites"><h3>Parc Longchamp</h3></div>
+                        <div class="hauterTitre titreActivites"><h4>Parc Longchamp</h4></div>
                     </div>
                 </div>  
   
