--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <h4>Hōtel le soleil du matin</h4>
-                            <p>Nuit à partir de 128€</p>
+                                <h4>Hōtel le soleil du matin</h4>
+                                <p>Nuit à partir de 128€</p>
+                            <br>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -195,7 +196,7 @@
                         <img class="imgPopulaire" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h4>Au cœur de l'eau chambres d'hôtes</h4>
-                            <p>Nuit à partir de 71€</p>
+                            <p>Nuit à partir de 71€</p><br>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -209,7 +210,7 @@
                         <img class="imgPopulaire" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
                             <h4>Hōtel Tout Bleu et Blanc</h4>
-                            <p>Nuit à partir de 68€</p>
+                            <p>Nuit à partir de 68€</p><br>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
