réglage de margin footerbloc3

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment"><!--enlever flexColumnCentre-->
-                            <h4>Auberge la Cannebiére</h4>
-                            <p>Nuit à partir de 25€</p>
-                            <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorGris"></i>
+                                <h4>Auberge la Cannebiére</h4>
+                                <p>Nuit à partir de 25€</p>
+                                <div>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorGris"></i>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
             </div>
             <div class="sizePopulaire backGris blocPopulaire">
                 <div class="flexBetween">
-                    <h2 class="tabletteSizeTitrePop testGras">Les plus Populaires</h2>
+                    <h2 class="TitrePop testGras">Les plus Populaires</h2>
                     <div><i class="fas fa-chart-line fa-lg x2"></i></div>
                 </div>
                 <div class="flexColumnAround">
