--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment"><!--enlever flexColumnCentre-->
+                            <div class="margTexteHérbegement">
                                 <h4>Auberge la Cannebiére</h4>
                                 <p>Nuit à partir de 25€</p>
                                 <div>
@@ -92,34 +93,39 @@
                                     <i class="fas fa-star colorBleu"></i>
                                     <i class="fas fa-star colorBleu"></i>
                                     <i class="fas fa-star colorGris"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h4>Hōtel du port</h4>
-                            <p>Nuit à partir de 52€</p>
-                            <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
+                            <div class="margTexteHérbegement">
+                                <h4>Hōtel du port</h4>
+                                <p>Nuit à partir de 52€</p>
+                                <div>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
                             </div>
+                        </div>
                         </div>
                     </div>
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <h4>Hōtel les mouettes</h4>
-                            <p>Nuit à partir de 76€</p>
-                            <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorGris"></i>
+                            <div class="margTexteHérbegement">
+                                <h4>Hōtel les mouettes</h4>
+                                <p>Nuit à partir de 76€</p>
+                                <div>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star colorGris"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -128,6 +134,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
+                            <div class="margTexteHérbegement">
                             <h4>Auberge de la mer</h4>
                             <p>Nuit à partir de 46€</p>
                             <div>
@@ -138,10 +145,12 @@
                                 <i class="fas fa-star colorGris"></i>
                             </div>
                         </div>
+                        </div>
                     </div>
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
+                            <div class="margTexteHérbegement">
                             <h4>Auberge le panier</h4>
                             <p>Nuit à partir de 23€</p>
                             <div>
@@ -152,10 +161,12 @@
                                 <i class="fas fa-star colorGris"></i>
                             </div>
                         </div>
+                        </div>
                     </div>
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
+                            <div class="margTexteHérbegement">
                             <h4>Hōtel chez Amina</h4>
                             <p>Nuit à partir de 96€</p>
                             <div>
@@ -165,6 +176,7 @@
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div> 
@@ -180,23 +192,29 @@
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                                <h4>Hōtel le soleil du matin</h4>
-                                <p>Nuit à partir de 128€</p>
-                            <br>
-                            <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                            </div>
+                                <div class="MargTextePop"><!--rajoute une div pour texte-->
+                                    <h4>Hōtel le soleil du matin</h4>
+                                    <p>Nuit à partir de 128€</p>
+                                </div>
+                                    <br>
+                                    <div>
+                                        <i class="fas fa-star colorBleu"></i>
+                                        <i class="fas fa-star colorBleu"></i>
+                                        <i class="fas fa-star colorBleu"></i>
+                                        <i class="fas fa-star colorBleu"></i>
+                                        <i class="fas fa-star colorBleu"></i>
+                                    </div>
+                                
                         </div>
                     </div>
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <h4>Au cœur de l'eau chambres d'hôtes</h4>
-                            <p>Nuit à partir de 71€</p><br>
+                            <div class="MargTextePop">
+                                <h4>Au cœur de l'eau chambres d'hôtes</h4>
+                                <p>Nuit à partir de 71€</p>
+                            </div>
+                            <br>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
@@ -209,8 +227,11 @@
                     <div class=" blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <h4>Hōtel Tout Bleu et Blanc</h4>
-                            <p>Nuit à partir de 68€</p><br>
+                            <div class="MargTextePop">
+                                <h4>Hōtel Tout Bleu et Blanc</h4>
+                                <p>Nuit à partir de 68€</p>
+                            </div>
+                            <br>
                             <div>
                                 <i class="fas fa-star colorBleu"></i>
                                 <i class="fas fa-star colorBleu"></i>
